# PersonalVault

./: .gitignore  C++ in Python.md  Fourier series.md  Impedance.md  Maximum power transfer theorem.md  NOTES TODO.md  Parallel computation in Python.md  Phasor.md  Separation of Variables.md  Table of derivatives.md  Untitled.ipynb  commit_to_repo.bat  reformat_script.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
.obsidian/: app.json  appearance.json  community-plugins.json  daily-notes.json  graph.json  hotkeys.json  types.json  workspace  workspace-mobile.json  workspace.json
.trash/: Curl.md
Canvas/: Outline.canvas
Daily Notes/: 2023-01-17.md  2023-01-27.md  2024-11-25.md  2024-12-11.md  Coding question.md
Daily notes/: 2022-09-09 code idea.md
Finance/: Finance simulation.ipynb  Theta gang strategy.ipynb  categories.toml  investment_calculator.py  quotes
Templates/: Algorithm note.md  Course Template.md  Math Notes.md  Meta-Skill.md  Notka niemiecki.md  ProgressLog.md  Tikz graph.md  daily-note.md  post.md  project.md  task.md  weekend_project.md  zettlekasten.md
Work/: Databases.md
Work/logger/: pyproject.toml
Work/logger/src/AxpoLogger.egg-info/: PKG-INFO  SOURCES.txt
Work/logger/src/logger/: logger.conf.json  logger_setup.py
Work/logger/tests/: main.py
daily-notes/: 2025-06-09.md
dashboards/: Todo Dashboard.md  deemed-unimportant.md  important-undone.md
extra/: Guide to x86 Assembly.html  Writing a custom iterator in modern C++ - Internal Pointers.html
notes/:  Most Important Lifestyle Habits Of Successful Founders.md  AND gate.md  (+381 more)
(+607 files in other folders)
